fixed contrast nieuwsbrief + added htaccess

--- a/index.css
+++ b/index.css
@@ -153,8 +153,9 @@ img {
 }
 
 .nieuwsbrief h2, .nieuwsbrief p {
-    color: #FEF5E9;
+    color: black;
     margin-top: 0.5em;
+    padding-top: 1.5em;
     text-align: left;
 }
 
@@ -182,7 +183,7 @@ img {
     border: none;
     border-radius: 10px;
     padding: 0.5em 2em 0.5em 2em;
-    background-color: #16AC9C;
+    background-color: black;
     color: #FEF5E9;
 }
 
@@ -231,7 +232,7 @@ footer div {
     text-align: center; 
 }
 
-/*scholen.php*/
+/*scholen*/
 
 .gebruik {
     width: 80%;
@@ -411,7 +412,7 @@ button {
         width: max-content;
     }
 
-    /*scholen.php*/
+    /*scholen*/
 
     .gebruik div {
         width: 100%;
